# active_sensing_local

./: .gitmodules  CMakeLists.txt  CMakeListsM.txt  Dockerfile  README.md  install.sh  package.xml  recovery.sh  roscore.sh  runlocal.sh  serverRecovery.sh
.gitold/: COMMIT_EDITMSG  ORIG_HEAD  config  gitk.cache  index  packed-refs
.gitold/logs/: HEAD
.gitold/logs/refs/: stash
.gitold/logs/refs/heads/: master  new_branch
.gitold/logs/refs/remotes/origin/: HEAD
.gitold/objects/pack/: pack-03d2a89169ac4ddc27bc12c03a320c60e6f66e0b.idx  pack-03d2a89169ac4ddc27bc12c03a320c60e6f66e0b.pack
.gitold/refs/: stash
.gitold/refs/heads/: new_branch
active_sensing_yml/capsule_robot/: 2017-09-26-14:10:59.txt  capsule_robot.yml
active_sensing_yml/multitier_peg_hole_2d/: 2017-09-04-14:11:00.txt  2017-09-06-23:15:29.txt  2017-09-07-20:05:33.txt  2017-09-08-14:08:20.txt  2017-09-10-21:03:07.txt  2017-09-11-08:59:08.txt  2017-09-11-18:38:24.txt  2017-09-12-07:40:34.txt  2017-09-16-16:06:47.txt  multitier_peg_hole_2d.yml
active_sensing_yml/peg_hole_2d/: 2017-09-13-16:09:27.txt  2017-09-14-08:20:52.txt  2017-09-14-17:40:22.txt  2017-09-15-08:41:13.txt  2017-09-17-17:41:48.txt  peg_hole_2d.yml  peg_hole_2d_recovery.yml
include/: active_sensing.h  entropy_estimation.h  math_utils.h  model.h  particle_filter.h  planner.h  simulator.h  simulator0915.h  state_space_planner.h
include/models/: abstract_robot_model.h  capsule_robot_model.h  multitier_peg_hole_2d_model.h  peg_hole_2d_model.h  peg_hole_3d_model.h
include/planners/: capsule_robot_planner.h  multitier_peg_hole_2d_planner.h  peg_hole_2d_planner.h  peg_hole_3d_planner.h  potential_field.h
matlab/: potential.m  test_policy.m
msg/: CT.msg  ObsrvBack.msg  ReqObsrv.msg
scripts/: confidence_interval.py
src/: active_sensing.cpp  entropy_estimation.cpp  particle_filter.cpp  planner.cpp  simulator.cpp  simulator0915.cpp  simulator_oringin.cpp
src/models/: abstract_robot_model.cpp  capsule_robot_model.cpp  multitier_peg_hole_2d_model.cpp  peg_hole_2d_model.cpp  peg_hole_3d_model.cpp
src/planners/: capsule_robot_planner.cpp  multitier_peg_hole_2d_planner.cpp  peg_hole_2d_planner.cpp  peg_hole_3d_planner.cpp  potential_field.cpp
src/problems/: abstract_robot_sim.cpp  capsule_robot_sim.cpp  multitier_peg_hole_2d_sim.cpp  peg_hole_2d_sim.cpp  peg_hole_3d_sim.cpp
src/ros_nodes/: peg_hole_3d_node.cpp
srv/: action_message.srv
test/: CMakeLists.txt  test_abstract_robot.cpp  test_active_sensing.cpp  test_entropy_estimation.cpp  test_particle_filter.cpp  test_peg_hole_2d.cpp  test_peg_hole_3d.cpp  test_potential_field.cpp  test_simulator.cpp
